Update to 1.19.3 and fix compilation errors